--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "ngx-slick-carousel": "^0.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
